[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rreal"
version = "0.0.1"
authors = [
  { name="Carlo Rizzardo", email="cr.git.mail@gmail.com" },
]
description = "Robotics Reinforcement Algorithms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
